# thesis-code

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  annotated.html  annotated_dup.js  book_8cpp.html  book_8hpp.html  book_8hpp.js  book_8hpp_source.html  build.sh  classApplication-members.html  classApplication.html  classApplication.js  classBook-members.html  classBook.html  classBook.js  classCSVWriter-members.html  classCSVWriter.html  classCSVWriter.js  classDashboard-members.html  classDashboard.html  classDashboard.js  classGMM-members.html  classGMM.html  classGMM.js  classLogger-members.html  classLogger.html  classLogger.js  classMarket-members.html  classMarket.html  classMarket.js  classOrderTracker-members.html  classOrderTracker.html  classOrderTracker.js  classReplayController-members.html  classReplayController.html  classReplayController.js  (+165 more)
.github/workflows/: ci.yml
analysis/: describe_features.py  features.py  plot_cases.py  plot_late_day.py
archive/MULN_Snapshot_20260421_1325/: METADATA.md
archive/MULN_Snapshot_20260421_1325/code/: run_tier1.sh  run_tier2.sh  run_tier3.sh  run_tier4.sh
archive/MULN_Snapshot_20260421_1325/code/scripts/: isolation_forest.py
archive/MULN_Snapshot_20260421_1325/output/models/: MULN_BASELINE_T1.joblib  MULN_BASELINE_T2.joblib  MULN_BASELINE_T3.joblib  MULN_BASELINE_T4.joblib
docs/: Order Lifetime Tracking (XNAS.ITCH).md  Order Lifetime Tracking.md  Testing.md
docs/Order Lifespan/: Tracking.md
include/: book.hpp  constants.hpp  csv.hpp  datetime.hpp  feature_engine.hpp  features.hpp  gui_application.hpp  market.hpp  metadata.hpp  metadata_handler.hpp  order_analyser.hpp  order_tracker.hpp  orderbook_processor.hpp  replay_engine.hpp  visualizer.hpp
manual_docs/: Feature Record.md  Order Tracking.md
output/: .~lock.comparison.csv#  comparison.csv
output/MULN_20221025/: comparison.csv
output/MULN_20221215/: T1.joblib  T2.joblib  T3.joblib  T4.joblib  comparison.csv
output/MULN_20230606/: FEATURES.csv  SCORES_T1.csv  SCORES_T2.csv  SCORES_T3.csv  SCORES_T4.csv  T1.joblib  T2.joblib  T3.joblib  T4.joblib  comparison.csv
output/MULN_20230817/: .~lock.comparison.csv#  FEATURES.csv  T1.joblib  T2.joblib  T3.joblib  T4.joblib  comparison.csv
scripts/: build_comparison_sheet.py  dbn_view.sh  describe_features.py  explain_anomalies.py  fetch_controls.sh  fetch_spoofing_dates.sh  find_modify.sh  generate_controls.py  inspect_type_none.sh  isolation_forest.py  lstm_ae.py  order_lifetime.sh  pipeline.py  plot_anomalies.py  plot_cases.py  quantify_anomalies.py  regression.py  tabulate_mbo.sh  trades.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  enums_0.js  enums_1.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+56 more)
src/: book.cpp  downloader.cpp  feature_engine.cpp  main.cpp  market.cpp  metadata.cpp  metadata_handler.cpp  order_tracker.cpp  orderbook_processor.cpp  tui_visualizer.cpp  visualizer.cpp  visualizer_main.cpp
src/app/: dashboard.cpp  dashboard.hpp  downloader.cpp  gmm_visualizer.cpp  gmm_visualizer.hpp  gui_application.cpp  gui_application.hpp  main.cpp  market_dashboard.cpp  market_dashboard.hpp  replay_controller.cpp  replay_controller.hpp  visualizer.cpp  visualizer.hpp
src/core/: book.cpp  book.hpp  constants.hpp  logging.hpp  market.cpp  market.hpp  replay_engine.hpp  telemetry.hpp  types.hpp
src/data/: book.cpp  book.hpp  market.cpp  market.hpp  replay_engine.hpp
src/feature_engineering/: feature_engine.cpp  feature_engine.hpp  features.hpp  order_analyser.hpp  order_tracker.cpp
src/features/: csv.hpp  order_tracker.cpp  order_tracker.hpp
src/model/: classifier.cpp  classifier.hpp  gmm.cpp  gmm.hpp
tests/: test_book.cpp  test_order_tracker.cpp  test_order_tracker.hpp
